@@ -47,6 +47,11 @@ Backend
 Administration / Customization
 -------------------------------------------------------------------------------
 
+* Content-length Header is now enabled by default
+
+The TypoScript setting config.enableContentLengthHeader has a new default
+value and is now enabled by default.
+
 -------------------------------------------------------------------------------
 Extbase
 -------------------------------------------------------------------------------
